--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Ayad Farhat's personal website"
+      content="Ayad Farhat is a software engineer based in Sydney, Australia who is passionate about blockchain, data structures, algorithms, distributed systems, and web development."
     />
     
     <!--
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ayad website</title>
+    <title>Ayad Farhat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
